src/test/deca/syntax/invalid/obtained_res/testCircularIncludesynt.res
/user/3/.base/elaslia/home/2A/gl01/target/classes/include/testCircularInclude.decah:1:35: Circular include for file testCircularInclude.deca
